[add] checkstyle upgrade + enable on unit tests